# stock

./: .env.example  .env.local.example  .gitignore  README.md  app.py  diagnose.py  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.jsx  page.jsx
app/api/chat/: route.js
app/api/fundamental/: route.js
app/api/hot-sector/: route.js
app/api/kline/: route.js
app/api/market/: route.js
app/api/quote/: route.js
app/lib/: basicFundamental.js  deepseek.js  eastmoneyFinance.js  eastmoneyKline.js  fundamentalAgent.js  fundamentalKnowledge.js  fundamentalPipeline.js  fundamentalSkill.js  fundamentalSources.js  hotSector.js  hotSectorAgent.js  marketAgent.js  marketEnvironment.js  technicalAgent.js  technicalKnowledge.js  tencentQuote.js
docs/: fundamental-agent-design.md
public/: manifest.webmanifest  sw.js
src/stock_agent/: __init__.py  core.py  examples.py
src/stock_agent/providers/: __init__.py  deepseek.py
